<resources>
    <string name="app_name">Trabalho 3</string>

    <!--    INICIO DO LOGIN -->
    <string name="title_login">Member Login</string>
    <string name="user">User</string>
    <string name="pass">Password</string>
    <string name="checkBox">Remember user</string>
    <string name="login">LOGIN</string>
    <string name="regist">REGIST</string>
    <string name="error_login">Login fail!</string>
    <!--    FIM DO LOGIN    -->

    <!--    INICIO REGIST  -->
    <string name="regist_name">Name</string>
    <string name="regist_mail">Mail</string>
    <string name="error_pass">Please check your password!</string>
    <string name="regist_add">Add successfully</string>
    <string name="regist_error">Insertion error</string>
    <!--    FIM DO REGIST   -->

    <!-- INICIO EDIT -->
    <string name="certeza">" Do you really want to delete the contact?"</string>
    <string name="alert_pass">Please insert password</string>
    <string name="alert_user">Please insert name</string>
    <string name="confirmar">Ok</string>
    <string name="cancelar">Cancel</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>



    <string name="error_delete">Fail to delete!</string>
    <string name="detail_title">"Profile Contact "</string>
    <string name="name">Name:</string>
    <string name="pnumber">Personal Number:</string>
    <string name="cnumber">Company Number:</string>
    <string name="mail">Email:</string>
    <string name="pcode">Postal Code:</string>
    <string name="lname">Lastname</string>
    <string name="Pnumber">Mobile</string>
    <string name="Cnumber">Telephone</string>
    <string name="Mail">Email</string>
    <string name="Pcode">Postal Code</string>
    <string name="add">ADD</string>
    <string name="perfil_title">Your Profile</string>

    <!-- SPINNER -->
    <string name="def">Default</string>
    <string name="oder_name">Order by name</string>
    <string name="oreder_number">Order by number</string>
    <string name="recente">"Recent contacts "</string>
    <string name="perfil">Profile</string>
</resources>
