<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Add">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLayout"
        android:layout_marginTop="15dp">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_contact"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/secondlayout"
        android:layout_below="@id/firstLayout"
        android:layout_marginTop="15dp">


        <!-- NAME -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nome"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/regist_name" />

        <!-- LASTNAME -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastname"
            android:layout_below="@id/nome"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/lname" />

        <!-- PERSONAL NUMBER -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personalNumber"
            android:layout_below="@id/lastname"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/pnumber"
            android:maxLength="9"/>

        <!-- COMPANY NUMBER -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/companyNumber"
            android:layout_below="@id/personalNumber"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/cnumber"
            android:maxLength="9"/>

        <!-- MAIL -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:layout_below="@id/companyNumber"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/regist_mail" />

        <!-- POSRTAL CODE -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postalCode"
            android:layout_below="@id/mail"
            android:layout_marginTop="15dp"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:hint="@string/Pcode" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/thirdLayout"
        android:layout_below="@id/secondlayout"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp">

        <!-- BUTTON -->

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add"
            android:id="@+id/btnAdd"
            android:onClick="btnAdd"
            android:textSize="16dp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColorHint="#000000"/>

    </RelativeLayout>
</RelativeLayout>