<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/firstLayout"
        android:layout_marginTop="35dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar contacto"
            android:textSize="35dp"
            android:gravity="center_horizontal"
            android:id="@+id/info"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/secondlayout"
        android:layout_below="@+id/firstLayout"
        android:layout_marginTop="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginBottom="25dp">

        <!-- NAME -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:backgroundTint="#000000"

            android:text="@string/regist_name"/>

        <!-- LASTNAME -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lastname"
            android:layout_below="@id/name"
            android:layout_marginTop="10dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:backgroundTint="#000000"

            android:text="@string/lname"/>

        <!-- PERSONAL NUMBER -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/personalNumber"
            android:layout_below="@id/lastname"
            android:layout_marginTop="10dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:maxLength="9"
            android:backgroundTint="#000000"

            android:text="@string/Pnumber"/>

        <!-- COMPANY NUMBER -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/companyNumber"
            android:layout_below="@id/personalNumber"
            android:layout_marginTop="10dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:maxLength="9"
            android:backgroundTint="#000000"

            android:text="@string/Cnumber"/>

        <!-- MAIL -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mail"
            android:layout_below="@id/companyNumber"
            android:layout_marginTop="10dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:backgroundTint="#000000"

            android:text="@string/Mail"/>

        <!-- PORTAL CODE -->

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/postalCode"
            android:layout_below="@id/mail"
            android:layout_marginTop="10dp"
            android:textColorHint="#000000"
            android:textColor="#000000"
            android:backgroundTint="#000000"

            android:text="@string/Pcode"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnEdit"
            android:onClick="btnEdit"
            android:layout_below="@id/postalCode"
            android:layout_marginTop="25dp"
            android:typeface="serif"
            android:textStyle="bold"
            android:textSize="16dp"

            android:hint="Edit"/>


    </RelativeLayout>

</RelativeLayout>